
[build-system]
requires = ["setuptools", "wheel", "Cython",  "numpy"]
build-backend = 'setuptools.build_meta'

[tool.poetry]
name = "bbhx"
version = "1.0.10"
description = "A package for BBH waveforms."
license = "GPL"
classifiers = ["Programming Language :: Python :: 3", "Operating System :: OS Independent"]
homepage = "https://github.com/mikekatz04/BBHx"
authors = ["Michael L. Katz"]
readme = "README.md"

[tool.poetry.dependencies]
python = "*"
# astropy = "==5.2.1"
# corner = "==2.2.1"
# healpy = "==1.16.2"
# "ligo.skymap" = "==1.0.4"
# matplotlib = "==3.6.3"
# pandas = "==1.5.2"
# seaborn = "==0.12.2"
# tables = "==3.8.0"

[tool.cibuildwheel.linux]
manylinux-x86_64-image = "manylinux2014"
manylinux-aarch64-image = "manylinux2014"

[tool.cibuildwheel.linux.environment]
# /project will be the $PWD equivalent inside the docker used to build the wheel
PKG_CONFIG_PATH = "/project/"

